# rialo-vercel

./: .gitignore  Cargo.toml  README.md  balance.js  build-binary.yml  build-rust.sh  index.html  package.json  runCli.js  transfer.js  vercel.json
.github/workflows/: build-binary.yml  test.yml
.rialo-tester/src/: main.rs
api/: airdrop.js
api/wallet/: create.js
